# dashboard

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  build_web.sh
docs/: index.html  manifest.json  plotter.js  plotter_bg.wasm
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20221030_192706_add_last_update.rs  m20221102_232244_add_join_table.rs  m20221102_232858_remove_unused_columns.rs  m20221106_211436_remove_query_x.rs
src/: lib.rs  main.rs  util.rs  worker.rs
src/app/: datasource.rs  mod.rs  util.rs  worker.rs
src/app/data/: mod.rs  source.rs  store.rs
src/app/gui/: metric.rs  mod.rs  panel.rs  scaffold.rs  source.rs
src/data/: mod.rs
src/data/entities/: metrics.rs  mod.rs  panel_metric.rs  panels.rs  points.rs  prelude.rs  sources.rs
src/gui/: metric.rs  mod.rs  panel.rs  scaffold.rs  source.rs
src/util/: worker.rs
src/worker/: mod.rs  surveyor.rs  visualizer.rs
