[package]
name = "dashboard"
version = "0.3.4"
edition = "2021"

[[bin]]
name = "dashboard_bin"
path = "src/main.rs"

[features]
web = ["chrono/wasmbind", "eframe/persistence"]

[dependencies]
rand = "0.8"
dirs = "4"
git-version = "0.3.5"
chrono = "0.4"
tracing = "0.1" # egui / eframe use tracing
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.1"
jql = { version = "4", default-features = false }
rfd = "0.9"
eframe = "0.19"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
sea-orm = { version = "0.10", features = [ "runtime-tokio-rustls", "sqlx-sqlite", "macros" ] }
reqwest = { version = "0.11", features = ["json"] }

[profile.dev.package."*"]
opt-level = 3
